--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.11.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
