--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start-nginx": "sudo nginx",
+    "start-ngrok": "ngrok http 80"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
@@ -15,6 +17,7 @@
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -37,7 +40,9 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.1.0",
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
