--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,18 @@
 {
+  "printWidth": 80,
+  "bracketSameLine": false,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "useTabs": false,
   "arrowParens": "avoid",
   "endOfLine": "auto",
-  "printWidth": 180,
   "overrides": [
     {
-      "files": "src/translation/**/*.ts",
+      "files": "*.test.{js,jsx,ts,tsx}",
       "options": {
-        "printWidth": 220
+        "printWidth": 100
       }
     }
   ]
