Added real time

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "@microsoft/signalr": "^8.0.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
